# fleet-sandbox-sample

./: .blackcube.json  README.md  greet.py  pyproject.toml  test_greet.py
.github/workflows/: ci.yml
.omp/: WATCHDOG.md  config.yml
.omp/rules/: no-destructive-git.md  no-git-push.md  no-secret-access.md  no-test-tampering.md  protect-fleet-config.md
